# CSE-31

./: .clang-format
Lab_01/: Makefile  averages.c  psudoAverages.txt  punishment.c  tpsAnswers.txt
Lab_02/: Makefile  appendTest.c  arrCopy.c  assignAnswers.txt  average.c  pointers.c  tpsAnswers.txt
Lab_03/: Makefile  NodeStruct.c  array.c  cyclic_ll.c  mem.c  tpsAnswers.txt
Lab_04/: Array2D.c  CMakeLists.txt  MatrixMult.c  MemCast.c  tpsAnswers.txt
Lab_1/: tpsAwnswers.txt
Lab_1/averages/: a.out  averages.c
Lab_1/main/: a.out  main.c
Lab_1/punishment/: a.out  punishment.c
Lab_2/: assignAnswers.txt  tpsAwnsers.txt
Lab_2/appendTest/: a.out  appendTest.c
Lab_2/arrCopy/: a.out  arrCopy.c
Lab_2/average/: a.out  average.c
Lab_2/pointers/: a.out  pointers.c
Lab_3/: tpsAwnsers.txt
Lab_3/Array/: a.out  array.c
Lab_3/Cyclic_LL/: a.out  cyclic_ll.c
Lab_3/Mem/: a.out  mem.c
Lab_3/NodeStruct/: NodeStruct.c  a.out
Lab_4/: tpsAnswers.txt
Lab_4/Array2D/: Array2D.c  a.out
Lab_4/MatrixMult/: MatrixMult.c  a.out
Lab_4/MemCast/: MemCast.c  a.out
Lab_5/: fib.s  myFirstExample.s  tpsAwnsers.txt
Lab_6/: a.out  compare.s  sumAll.s  test.c  tpsAnswers.txt
Lab_7/: tpsAnswers.txt
Lab_7/proc1/: proc1.c  proc1.s
Lab_7/proc2/: a.out  proc2.s
Lab_7/proc3/: a.out  proc3.s
Lab_8/: fib.s  tpsAnswers.txt
Lab_9/: individualAssign1.txt  tpsAnswers.txt
Mips/: a.out  quickSort.c  quickSort.s
Project_01/: Makefile  wordsearch.c
Project_1/: a.out  wordsearch.c
Project_2/: a.out  avgScore.c  avgScore.s
test/: a.out  test.c
(+7 files in other folders)
